fixed aligning top nav bar

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -34,21 +34,6 @@ a:hover {
 }
 
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-h2 {
-  font-size: 2em;
-  line-height: 1.1;
-}
-
-h3 {
-  font-size: 1.5em;
-  line-height: 1.1;
-}
-
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -109,6 +94,7 @@ body {
 /* Pixelify font to headings */
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Pixelify', sans-serif;
+  line-height: 1.1;
 }
 
 h1 {
